--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,12 @@ android {
 }
 
 dependencies {
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
     implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation "androidx.camera:camera-core:1.3.4"
+    implementation "androidx.camera:camera-camera2:1.3.4"
+    implementation "androidx.camera:camera-lifecycle:1.3.4"
+    implementation "androidx.camera:camera-view:1.3.4"
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
